# Sentinel

./: README.md  pyproject.toml  requirements.txt
data/raw/: credit_default_full.csv  production_data.csv  reference_data.csv
docker/: Dockerfile
scripts/: download_data.py  test_drift_detector.py
src/: dashboard.py
src/api/: main.py
src/drift_detection/: detector.py
